Fix till overflow-y bug, which exists at 8917048.

--- a/app/styles/hack.sass
+++ b/app/styles/hack.sass
@@ -50,17 +50,10 @@ a
   +display-box
   .label
     margin-left: 5px
-  .link
-    width: 100%
-    display: inline-block
-    img
-      width: 16px
-      height: 16px
-      margin-right: 5px
-      vertical-align: -2px
 
   .index
     $pad: 15px
+    $width: 300px
     &,a,li
       color: #666
       line-height: 25px
@@ -68,27 +61,24 @@ a
       color: black
       text-decoration: none
     background-color: white
-    border-right: 5px solid #888
+    border-right: 3px solid #888
     cursor: w-resize
     font-family: "Lantinghei TC Extralight", "Hiragino Kaku Gothic Pro", "Apple LiGothic", "Heiti TC", "LiHei Pro", "Microsoft YaHei", "微軟正黑體", "文泉驿正黑", sans-serif
     font-size: 16px
-    width: 300px
+    overflow: visible
+    width: $width
     +transition(margin-left .15s, border-right-width .15s .15s)
-    overflow-y: auto
     &.collapsed
-      border-right: 8px solid #888
       cursor: e-resize
-      margin-left: -265px
-      overflow-y: hidden
-      span.collapser
-        right: 2px
-        position: absolute
-        color: #aaf
+      margin-left: -$width+35px
       img
-        position: fixed
-        left: 10px
+        margin-top: 3px
+        position: absolute
+        right: 0
+      span.collapser
+        display: none
       ul
-        overflow-y: hidden
+        overflow: visible
 
     .hackid
       background-color: #ddd
@@ -103,8 +93,13 @@ a
     ul
       margin: 0
       overflow-x: hidden
-      overflow-y: auto
       .link
+        display: inline-block
+        img
+          width: 16px
+          height: 16px
+          margin-right: 5px
+          vertical-align: -2px
         cursor: pointer
         &:hover
           background-color: #ddd
@@ -117,6 +112,7 @@ a
         position: relative
         .link
           padding-left: $pad
+          width: 100%
           +transition(.15s)
           &:hover
             padding-left: $pad+22px
